# shido

./: README.md  manage.py  pyproject.toml  requirements.txt
apis/: tests.py  views.py
apps/: forms.py  tests.py  urls.py  views.py
shido/: settings.py  urls.py
templates/apps/class/: detail.html  list.html
templates/apps/instances/: detail_raw.html  list.html  property_form.html  property_list.html
templates/apps/property_type/: detail.html  list.html
users/: forms.py  models.py  tests.py  views.py
